# sigrid

./: CMakeLists.txt  README.md  collect.sh  setup.py
cpp/: CMakeLists.txt  SgBoxIterator.cpp  SgBoxIterator.h  SgConserveInterp2D.cpp  SgConserveInterp2D.h  SgConserveInterp2D.h_bk  SgFindAreaOverlaps.h  SgFindOverlappingCells2D.cpp  SgFindOverlappingCells2D.h  SgFindPointInCell.cpp  SgFindPointInCell.h  SgFlowInterp2D.cpp  SgFlowInterp2D.h  SgLine.cpp  SgLine.h  SgLinearSolve.cpp  SgLinearSolve.h  SgNdims.h  SgNodeInterp2D.cpp  SgNodeInterp2D.h  SgOctreePoints.cpp  SgOctreePoints.h  SgQuadIntersect.cpp  SgQuadIntersect.h  SgQuadLineFlows.cpp  SgQuadLineFlows.h  SgQuadLineIntersect.cpp  SgQuadLineIntersect.h  SgSideIterator.h  SgStructGrid2DIntersect.cpp  SgStructGrid2DIntersect.h  SgTetrahedron.cpp  SgTetrahedron.h  SgTriangle.cpp  SgTriangle.h  SgTriangulate.cpp  SgTriangulate.h  SgTripolarGrid.cpp  SgTripolarGrid.h
examples/: CMakeLists.txt  polarFlow.py.in  polarFlowApprox.py.in  sgutils.py  streamFlow.py.in
profiling/: big41x81.txt  big81x161.txt  sandybridge.master.src201x401.dst161x321-5.txt  sigrid-20-Feb-2017.txt
py/: __init__.py  conserveInterp2D.py
scripts/: cellFaceBasis.py
tests/: CMakeLists.txt  createGrids2D.h  streamFunctionInterp.cxx  testBoxIterator.py.in  testCmdLineArgParser.cxx  testConserveInterp2D.cxx  testConserveInterp2DBig.cxx  testConserveInterp2DBig2.cxx  testConserveInterpDisk.cxx  testCreatePolar.py.in  testCreateRectangular.py.in  testCreateRotatedPole.py.in  testFindOverlappingCells2D.cxx  testFindPointInCell1D.cxx  testFindPointInCell1D.py.in  testFindPointInCellPolar.cxx  testFindPointInCellPolarXY.cxx  testFindPointInCellRotatedPole.cxx  testFlowInterp2D.cxx  testLine.py.in  testLinearSolve.cxx  testLinearSolve.py.in  testLinearSolveOverDetermined.py.in  testLinearSolveUnderDetermined.py.in  testNodeInterp2D.cxx  testNodeInterpRotatedPole.cxx  testOctreePoints.cxx  testQuadIntersect.cxx  testQuadLineFlows.cxx  testQuadLineIntersect.cxx  testQuadOverlap.cxx  testSideIterator.cxx  testTetrahedron.py.in  testTriangle.py.in  testTriangulate.cxx  testTripolarGrid.cxx
utils/: CMakeLists.txt  CmdLineArgParser.cpp  CmdLineArgParser.h  createGrids2D.cpp  createGrids2D.h
